kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-api-deployment
  namespace: backend-api
  labels:
    app: python-api-deployment
    app.kubernetes.io/name: python-api-deployment
    app.kubernetes.io/version: v1.0
spec:
  replicas: 1
  selector:
    matchLabels:
      app: python-api
      app.kubernetes.io/name: python-api
  template:
    metadata:
      labels:
        app: python-api
        app.kubernetes.io/name: python-api
    spec:
      containers:
      - name: python-api
        image: sauravm/demo-cicd:ed228253107d344891fb81c361b03c4e48112f7d
        ports:
        - containerPort: 5000
          name: flask
          protocol: TCP
