kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-api-service
  namespace: backend-api
  labels:
    app: python-api-service
    app.kubernetes.io/name: python-api-service
    app.kubernetes.io/version: v1.0
spec:
  type: ClusterIP
  selector:
    app: python-api
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 5000
